--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@ body {
 }
 
 a {
-  color: #7dd3fc;
+  color: #88fc7d;
   text-decoration: none;
 }
 
@@ -19,6 +19,6 @@ html {
   color-scheme: dark;
 }
 body {
-  color: #e7e8e8;
+  color: #e8e8e7;
   background: #0f1318;
 }
