--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -64,7 +64,7 @@
 }
 
 .card {
-  background-color: #1b2129;
+  background-color: #009c10;
   margin: 1rem;
   padding: 1.5rem;
   text-align: left;
@@ -73,7 +73,7 @@
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 350px;
+  max-width: 500px;
 }
 
 .card:hover,
