--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -20,13 +20,13 @@
 
 .divider {
   width: 50%;
-  border-color: grey;
+  border-color: #F878CD;
   opacity: 0.25;
 }
 
 .smallDivider {
-  width: 25%;
-  border-color: grey;
+  width: 50%;
+  border-color: #F878CD;
   margin-top: 64px;
   opacity: 0.25;
 }
@@ -45,42 +45,42 @@
 
 .nftBox {
   border-radius: 16px;
-  border: 1px solid #ccc;
-  width: 19%;
+  border: 2px solid #F878CD;
+  width: 25%;
   min-height: 200px;
   padding: 16px;
 }
 
 .optionSelectBox {
   border-radius: 16px;
-  border: 1px solid #ccc;
-  width: 48%;
+  border: 2px solid #F878CD;
+  width: 100%;
   min-height: 200px;
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding-left: 12px;
-  padding-right: 12px;
+  padding-left: 24px;
+  padding-right: 24px;
   cursor: pointer;
 }
 
 .selectBoxTitle {
   font-size: 1.75rem;
-  margin-top: 8px;
-  margin-bottom: 8px;
+  margin-top: 16px;
+  margin-bottom: 16px;
 }
 
 .selectBoxDescription {
-  color: rgba(108, 255, 147, 0.9);
-  margin-top: 0px;
+  color: #6FE99A;
+  margin-top: 16px;
 }
 
 /* Between 1200 and 800 */
-@media only screen and (min-width: 800px) and (max-width: 1400px) {
+@media only screen and (min-width: 800px) and (max-width: 1200px) {
   .nftBox {
-    width: 49%;
+    width: 100%;
     margin-top: 16px;
   }
 }
@@ -92,7 +92,7 @@
     justify-content: center;
   }
   .nftBox {
-    width: 90%;
+    width: 100%;
     margin-top: 16px;
   }
   .optionSelectBox {
@@ -107,7 +107,7 @@
   align-items: center;
   justify-content: center;
   gap: 1%;
-  width: 1600px;
+  width: 1200px;
   max-width: 95vw;
   flex-wrap: wrap;
   margin: 16px 0;
@@ -121,7 +121,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border: 1px solid rgba(255, 255, 255, 0.4);
+  border: 2px solid #F878CD;
   gap: 16px;
 }
 
@@ -129,7 +129,7 @@
   margin-top: 0px;
   margin-bottom: 0px;
   font-weight: 600;
-  color: rgba(255, 255, 255, 0.7);
+  color: #F878CD;
 }
 
 /* Second tokenLabel item */
@@ -144,7 +144,7 @@
 /* On Mobile, make tokenGrid 100% width */
 @media only screen and (max-width: 850px) {
   .tokenItem {
-    width: 90%;
+    width: 100%;
     margin-top: 12px;
   }
 }
@@ -174,7 +174,7 @@
 }
 
 .nftMedia {
-  width: 100%;
+  width: 25%;
   max-height: 300px;
   border-radius: 15px;
 }
